Activate Travis only when:
it is a PR *or* if it is a push to master/develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 os: linux
 dist: focal
 compiler: gcc
+branches:
+  only:
+    - "master"
+    - "develop"
 services:
 - xvfb
 matrix:
