--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,6 +9,7 @@ jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
         os: [ubuntu-latest, macos-latest]
@@ -23,15 +24,13 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get install -y gfortran-9
-        if [[ ! -d "$HOME/.local/bin" ]]; then mkdir "$HOME/.local/bin"; fi
-        ln -fs /usr/bin/gfortran-9 $HOME/.local/bin/gfortran
+        echo $PATH
         gfortran --version
     - name: Install system dependencies (macOS)
       if: runner.os == 'macOS'
       run: |
         brew upgrade gfortran-9
-        if [[ ! -d "$HOME/.local/bin" ]]; then mkdir "$HOME/.local/bin"; fi
-        ln -fs /usr/bin/gfortran-9 $HOME/.local/bin/gfortran
+        echo $PATH
         gfortran --version
     - name: Install Vorta
       run: |
