--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        os: [ubuntu-latest, macos-lates, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -20,16 +20,16 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install system dependencies (Linux)
+    - name: Install and print system dependencies (Linux)
       if: runner.os == 'Linux'
       run: |
         sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
         gfortran --version
-    - name: Install system dependencies (macOS)
+    - name: Install and print system dependencies (macOS)
       if: runner.os == 'macOS'
       run: |  
         gfortran --version
-    - name: Install system dependencies (Windows)
+    - name: Install and print system dependencies (Windows)
       if: runner.os == 'Windows'
       run: |  
         gfortran --version
