--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,6 +42,11 @@ jobs:
     - name: Test with nosetests
       run: |
         nosetests -v --with-id --with-timer -w ./autotest --with-coverage --cover-package=amipy
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+
 
   lint:
     runs-on: ubuntu-latest
