Where is lcov.info

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,7 +42,8 @@ jobs:
     - name: Test with nosetests
       run: |
         nosetests -v --with-id --with-timer -w ./autotest --with-coverage --cover-package=amipy
-        sudo apt install -y tree && tree -L 2
+        sudo apt install -y tree && tree -La 2
+        find lcov.info
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
