--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -41,25 +41,7 @@ jobs:
         pip install coveralls nose-timer
     - name: Test with nosetests
       run: |
-        nosetests -v --with-id --with-timer -w ./autotest --with-coverage --cover-package=amipy
-    - name: Coveralls Parallel
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.github_token }}
-        flag-name: run-${{ matrix.python-version }}-${{ matrix.os }}
-        path-to-lcov: ".coverage"
-        parallel: true
-  
-  finish:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-    - name: Coveralls Finished
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.github_token }}
-        parallel-finished: true
-        path-to-lcov: ".coverage"
+        nosetests -v --with-id --with-timer -w ./autotest
 
 
   lint:
