--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -41,7 +41,15 @@ jobs:
         pip install coveralls nose-timer
     - name: Test with nosetests
       run: |
-        nosetests -v --with-id --with-timer -w ./autotest
+        nosetests -v --with-id --with-timer -w ./autotest --with-coverage --cover-package=amipy
+  
+  finish:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Coveralls
+      run: |
+        coveralls
 
 
   lint:
