--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -38,19 +38,10 @@ jobs:
         pip install .
         pip install https://github.com/modflowpy/pymake/zipball/master
         pip install https://github.com/modflowpy/flopy/zipball/develop
-        pip install coveralls nose-timer
+        pip install nose-timer
     - name: Test with nosetests
       run: |
-        nosetests -v --with-id --with-timer -w ./autotest --with-coverage --cover-package=amipy
-  
-  finish:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-    - name: Coveralls
-      run: |
-        pip install coveralls
-        coveralls
+        nosetests -v --with-id --with-timer -w ./autotest
 
 
   lint:
@@ -61,8 +52,11 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
-    - name: Install flake8
+    - name: Install packages
       run: |
         pip install flake8
-    - name: Run Flake8
+        pip install black
+    - name: Run flake8
       run: flake8
+    - name: Run black
+      run: black --check
