--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,6 +13,9 @@ jobs:
       matrix:
         python-version: [3.6, 3.7, 3.8]
         os: [ubuntu-latest, macos-latest, windows-latest]
+    env:
+      OS: ${{ matrix.os }}
+      PYTHON: ${{ matrix.python-version }}
 
     steps:
     - uses: actions/checkout@v2
@@ -38,11 +41,16 @@ jobs:
         pip install .
         pip install https://github.com/modflowpy/pymake/zipball/master
         pip install https://github.com/modflowpy/flopy/zipball/develop
-        pip install requests nose-timer
+        pip install requests nose-timer coverage
     - name: Test with nosetests
       run: |
-        nosetests -v --with-id --with-timer -w ./autotest
-
+        nosetests -v --with-id --with-timer -w ./autotest --cover-xml-file=coverage.xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
+        flags: unittests
+        env_vars: OS,PYTHON
 
   lint:
     runs-on: ubuntu-latest
