--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,7 +44,7 @@ jobs:
           pip install -r test_dependencies.txt
       - name: Test with pytest
         run: |
-          pytest --cov=./ --cov-report=xml
+          pytest --cov=amipy --cov-report=xml tests/
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
