Use Codecov as coverage provider and moves to pytest (#15)
- add Codecov as coverage provider
- moves to pytest
- add badges to README

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,48 +15,49 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install and print system dependencies (Linux)
-      if: runner.os == 'Linux'
-      run: |
-        sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
-        gfortran --version
-    - name: Install and print system dependencies (macOS)
-      if: runner.os == 'macOS'
-      run: |  
-        gfortran --version
-    - name: Install and print system dependencies (Windows)
-      if: runner.os == 'Windows'
-      run: |  
-        gfortran --version
-    - name: Install amipy
-      run: |
-        pip install .
-        pip install https://github.com/modflowpy/pymake/zipball/master
-        pip install https://github.com/modflowpy/flopy/zipball/develop
-        pip install requests nose-timer
-    - name: Test with nosetests
-      run: |
-        nosetests -v --with-id --with-timer -w ./autotest
-
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install and print system dependencies (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
+          gfortran --version
+      - name: Install and print system dependencies (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          gfortran --version
+      - name: Install and print system dependencies (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          gfortran --version
+      - name: Install amipy
+        run: |
+          pip install .
+      - name: Install test dependencies
+        run: |
+          pip install -r test_dependencies.txt
+      - name: Test with pytest
+        run: |
+          pytest --cov=amipy --cov-report=xml tests/
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
 
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Install packages
-      run: |
-        pip install flake8
-        pip install black
-    - name: Run flake8
-      run: flake8
-    - name: Run black
-      run: black --check
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+      - name: Install packages
+        run: |
+          pip install flake8
+          pip install black
+      - name: Run flake8
+        run: flake8
+      - name: Run black
+        run: black --check
