--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,6 +20,20 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install and print system dependencies (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
+          gfortran --version
+      - name: Install and print system dependencies (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install gfortran
+          gfortran --version
+      - name: Install and print system dependencies (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          gfortran --version
       - name: Install amipy
         run: |
           pip install -e .
