--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install and print system dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
-          brew cask install gfortran
+          brew gcc@9
           gfortran --version
       - name: Install and print system dependencies (Windows)
         if: runner.os == 'Windows'
