--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v2
@@ -26,8 +26,13 @@ jobs:
           sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
           gfortran --version
       - name: Install and print system dependencies (macOS)
+        shell: bash
         if: runner.os == 'macOS'
         run: |
+          brew cask install gfortran
+          sudo ln -fs /usr/local/gfortran/bin/gfortran /usr/local/bin/gfortran
+          sudo ln -fs /usr/local/gfortran/bin/gcc /usr/local/bin/gcc
+          sudo ln -fs /usr/local/gfortran/bin/g++ /usr/local/bin/g++
           gfortran --version
       - name: Install and print system dependencies (Windows)
         if: runner.os == 'Windows'
