--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -71,4 +71,4 @@ jobs:
       - name: Run flake8
         run: flake8
       - name: Run black
-        run: black --check
+        run: black --check .
