--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -67,8 +67,6 @@ jobs:
       - name: Install packages
         run: |
           pip install flake8
-          pip install black
       - name: Run flake8
         run: flake8
-      - name: Run black
-        run: black --check .
+      - uses: psf/black@stable
