--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,6 +66,9 @@ jobs:
           python-version: 3.8
       - name: Install packages
         run: |
+          pip install black
           pip install flake8
+      - name: Run black
+        run: black --check .
       - name: Run flake8
         run: flake8
