--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,8 @@
 name: Continuous integration
 
 on:
+  schedule:
+    - cron: '0 2 * * *' # run at 2 AM UTC
   push:
     branches: [develop, master]
   pull_request:
