--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,8 +2,13 @@ name: Continuous integration
 
 on:
   push:
-    branches: [develop, master]
+    branches: 
+      - develop
+      - master
   pull_request:
+    branches:
+      - develop
+      - master
 
 jobs:
   test:
