--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,6 +30,10 @@ jobs:
         run: |
           sudo ln -fs /usr/bin/gfortran-10 /usr/local/bin/gfortran
           gfortran --version
+      # Remove as soon as https://github.com/modflowpy/pymake/issues/111 is fixed
+      - name: Install numpy
+        run: |
+          pip install numpy
       - name: Install and print system dependencies (macOS)
         shell: bash
         if: runner.os == 'macOS'
@@ -40,10 +44,6 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           gfortran --version
-        # Remove as soon as https://github.com/modflowpy/pymake/issues/111 is fixed
-      - name: Install numpy
-        run: |
-          pip install numpy
       - name: Install test dependencies
         run: |
           pip install -e ".[tests]"
@@ -59,10 +59,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v1
-        with:
-          python-version: 3.8
       - name: Install lint dependencies
         run: |
           pip install -e ".[lint]"
@@ -70,5 +68,6 @@ jobs:
         run: black --check .
       - name: Run isort
         run: isort --check .
-      - name: Run flake8
-        run: flake8
+      - name: Run mypy
+        run: |
+          mypy --install-types --non-interactive --ignore-missing-imports .
