--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -71,3 +71,8 @@ jobs:
       - name: Run mypy
         run: |
           mypy --install-types --non-interactive --ignore-missing-imports .
+      - name: Build and check packages
+        run: |
+          pip install --upgrade build twine
+          python -m build
+          twine check --strict dist/*
