Move static project metadata to pyproject.toml, move/fix flake8 config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,62 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=61"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "xmipy"
+description = "xmipy is an extension to the bmipy Python package"
+readme = "README.md"
+authors = [
+    {name = "Martijn Russcher", email = "Martijn.Russcher@deltares.nl"},
+    {name = "Julian Hofer", email = "Julian.Hofer@deltares.nl"},
+    {name = "Joseph D. Hughes", email = "jdhughes@usgs.gov"},
+]
+keywords = ["BMI", "Basic Model Interface"]
+license = {text = "CC0"}
+classifiers = [
+    "Intended Audience :: Science/Research",
+    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
+    "Topic :: Scientific/Engineering :: Hydrology",
+]
+requires-python = ">=3.8"
+dependencies = [
+    "bmipy",
+    "numpy",
+]
+dynamic = ["version"]
+
+[project.optional-dependencies]
+tests = [
+    "flopy",
+    "mfpymake",
+    "pytest",
+    "pytest-cov",
+    "requests",
+]
+lint = [
+    "black",
+    "isort",
+    "mypy",
+]
+docs = [
+    "pdoc",
+]
+
+[tool.setuptools]
+zip-safe = false
+
+[tool.setuptools.dynamic]
+version = {attr = "xmipy.__version__"}
+
+[tool.setuptools.packages.find]
+include = ["xmipy", "xmipy.*"]
+
+[tool.setuptools.package-data]
+"xmipy" = ["py.typed"]
+
+[project.urls]
+Documentation = "https://deltares.github.io/xmipy/xmipy.html"
+Source = "https://github.com/Deltares/xmipy"
 
 [tool.isort]
 profile = "black"
