Remove pymake (mfpymake) dependency, switch to "executables" repo

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,6 +35,8 @@ jobs:
         # This is necessary until proper error reporting is implemented by Modflow
         run: |
           pytest -vs --cov=xmipy --cov-report=xml tests/
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
 
