--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,45 +7,31 @@ name = "xmipy"
 description = "xmipy is an extension to the bmipy Python package"
 readme = "README.md"
 authors = [
-    {name = "Martijn Russcher", email = "Martijn.Russcher@deltares.nl"},
-    {name = "Julian Hofer", email = "Julian.Hofer@deltares.nl"},
-    {name = "Joseph D. Hughes", email = "jdhughes@usgs.gov"},
+    { name = "Martijn Russcher", email = "Martijn.Russcher@deltares.nl" },
+    { name = "Julian Hofer", email = "Julian.Hofer@deltares.nl" },
+    { name = "Joseph D. Hughes", email = "jdhughes@usgs.gov" },
 ]
 keywords = ["BMI", "Basic Model Interface"]
-license = {text = "CC0"}
+license = { text = "CC0" }
 classifiers = [
     "Intended Audience :: Science/Research",
     "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
     "Topic :: Scientific/Engineering :: Hydrology",
 ]
 requires-python = ">=3.8"
-dependencies = [
-    "bmipy",
-    "numpy",
-]
+dependencies = ["bmipy", "numpy"]
 dynamic = ["version"]
 
 [project.optional-dependencies]
-tests = [
-    "flopy >=3.3.6",
-    "pytest",
-    "pytest-cov",
-    "requests",
-]
-lint = [
-    "black",
-    "isort",
-    "mypy",
-]
-docs = [
-    "pdoc",
-]
+tests = ["flopy >=3.3.6", "pytest", "pytest-cov", "requests"]
+lint = ["black", "ruff", "mypy"]
+docs = ["pdoc"]
 
 [tool.setuptools]
 zip-safe = false
 
 [tool.setuptools.dynamic]
-version = {attr = "xmipy.__version__"}
+version = { attr = "xmipy.__version__" }
 
 [tool.setuptools.packages.find]
 include = ["xmipy", "xmipy.*"]
