Finish type hints

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ profile = "black"
 multi_line_output = 3
 
 [tool.mypy]
+exclude = ["tests"]
 warn_unused_configs = true
 warn_redundant_casts = true
 warn_unused_ignores = true
