--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,19 +33,12 @@ zip-safe = false
 [tool.setuptools.dynamic]
 version = { attr = "xmipy.__version__" }
 
-[tool.setuptools.packages.find]
-include = ["xmipy", "xmipy.*"]
-
 [tool.setuptools.package-data]
 "xmipy" = ["py.typed"]
 
 [project.urls]
 Documentation = "https://deltares.github.io/xmipy/xmipy.html"
 Source = "https://github.com/Deltares/xmipy"
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
 
 [tool.mypy]
 exclude = ["tests"]
@@ -62,3 +55,8 @@ disallow_incomplete_defs = true
 disallow_untyped_defs = true
 no_implicit_reexport = true
 warn_return_any = true
+
+[tool.ruff]
+select = ["E", "F", "NPY", "PD", "C4", "I"]
+ignore = ["E501", "PD901"]
+fixable = ["I"]
