--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12"]
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
@@ -24,8 +24,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "${{ matrix.python-version }}"
-      - name: Setup GNU Fortran
-        uses: modflowpy/install-gfortran-action@v1
+      - name: Setup Fortran
+        uses: fortran-lang/setup-fortran@v1
       - name: Install test dependencies
         run: |
           pip install -e ".[tests]"
