--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,20 +23,8 @@ jobs:
           pip install ruff
       - name: Run Ruff
         run: ruff check .
-  black:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install black
-      - name: Run black
-        run: black --check .
+      - name: Run Ruff format
+        run: ruff format --check .
   mypy:
     runs-on: ubuntu-latest
     steps:
